--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -135,32 +135,32 @@
 <div class="block-1">
 <div class="row">
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
 <span><strong itemprop="name">Episode 01</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="1">
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
 <span><strong itemprop="name">Episode 02</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="2">
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
 <span><strong itemprop="name">Episode 03</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="3">
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
 <span><strong itemprop="name">Episode 04</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="4">
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
 <span><strong itemprop="name">Episode 05</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="5">
 </div>
 
-<div class="columns" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+<div class="columno" itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
 <span><strong itemprop="name">Episode 06</strong><a itemscope itemtype="https://schema.org/WebPage" itemprop="item" itemid="downloadlink" href="downloadlink" alt="Download episode">Download</a></span>
 <meta itemprop="position" content="6">
 </div>
@@ -180,116 +180,112 @@
 <div class="block-1">
 <div class="row">
 
-<div class="columns">
-<span><strong>Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
 </div>
 </div>
 <!---End Episodes---->
-
 </div>
 <!-----END SEASON THREE EPISODES----->
-	
 
 <!-----SEASON TWO EPISODES----->
 <div class="container-11">
-<h2 id="season3">Season Two</h2>
+<h2 id="season2">Season Two</h2>
 
 <!---Episodes---->
 <div class="block-1">
 <div class="row">
 
-<div class="columns">
-<span><strong>Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
 </div>
 </div>
 <!---End Episodes---->
-
 </div>
 <!-----END SEASON TWO EPISODES----->
-
-
+	
 <!-----SEASON ONE EPISODES----->
 <div class="container-11">
-<h2 id="season3">Season One</h2>
+<h2 id="season1">Season One</h2>
 
 <!---Episodes---->
 <div class="block-1">
 <div class="row">
 
-<div class="columns">
-<span><strong>Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 01</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 02</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 03</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 04</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 05</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
-<div class="columns">
-<span><strong>Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+<div class="columno">
+<span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
 </div>
 </div>
 <!---End Episodes---->
-
 </div>
 <!-----END SEASON ONE EPISODES----->
+
 
 <!--SECTION 2 KEYWORDS CHAPTERS-->
 <div class="container-10"><p rel="tags"><span>Tags:</span> Demon slayer, demon slayer anime series, demon slayer manga online, read demon slayer manga online, read demon slayer latest chapter online, download demon slayer movies, download demon slayer anime, download demon slayer movies HD, Download demon slayer latest anime series, demon slayer hashira training, demon slayer season 1, demon slayer season 2,demon slayer season 3,demon slayer season 4,demon slayer season 5, kimetsu no yaiba, kimetsu 360</p></div>
