--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial scale=1">
+<meta name="google-site-verification" content="l14lY2E9oxWq9ohRfhDtpeM2D44bgWMkxZTE5pos2qg" />
 <link rel="canonical" href="https://https://demon-slayer.pages.dev">
 <title>Demon Slayer Manga And Anime Series Online | Kimetsu 360</title>
 <meta name="title" content="Demon Slayer Manga And Anime Series Online | Kimetsu 360">
