--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
 <meta property="twitter:description" content="You are Reading Demon Slayer Manga Online Fully Coloured, Download Latest Anime Episodes And Movies For Free In High Quality Format, only at Kimetsu 360">
 <meta property="twitter:image" content="img/background-1.webp">
 <meta name="google-site-verification" content="l14lY2E9oxWq9ohRfhDtpeM2D44bgWMkxZTE5pos2qg" />
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XP6KNZ2WQM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XP6KNZ2WQM');
+</script>
 </head>
 <body>
 
