--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -48,6 +48,15 @@
 <meta property="twitter:title" content="Download Demon Slayer Anime Episodes Online | Kimetsu 360">
 <meta property="twitter:description" content="Download Demon Slayer Episodes Online. You are Downloading the Latest Episodes, Movies And More of demon slayer series In free HD Formats, only at Kimetsu 360">
 <meta property="twitter:image" content="../img/background-1.webp">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XP6KNZ2WQM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XP6KNZ2WQM');
+</script>
 </head>
 <body>
 
