--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -5,6 +5,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial scale=1">
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W5H4B8FV');</script>
+<!-- End Google Tag Manager -->
 <link rel="canonical" href="https://demon-slayer.pages.dev/seasons/episodes.html">
 <title>Download Demon Slayer Anime Episodes Online | Kimetsu 360</title>
 <meta name="title" content="Download Demon Slayer Anime Episodes Online | Kimetsu 360">
@@ -59,7 +66,11 @@
 </script>
 </head>
 <body>
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W5H4B8FV"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+	
 <!--Seo Author Rich Google Article Data--->
 <div id="hide" itemscope itemtype="https://schema.org/Article">
 <!--End Author Rich Google Article Data-->
