--- a/index.html
+++ b/index.html
@@ -370,6 +370,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </a>
 </div>
 <!----END MISCELLANEOUS CODE----->
+	
+<script>
+  if (typeof navigator.serviceWorker !== 'undefined') {
+    navigator.serviceWorker.register('pwabuilder-sw.js')
+  }
+</script>
+
 
 <!----Js Codes---->
 <script src="js/allscript.js"></script>
