--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <link rel="icon" href="img/logo.webp">
 <link rel="og:icon" href="img/logo.webp">
 <link rel="stylesheet" href="css/style.css">
+<link rel="manifest" href="manifest.json" />
 
 <!-- Google / Search Engine Tags -->
 <meta itemprop="name" content="Demon Slayer Manga And Anime Series Online | Kimetsu 360">
