--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta property="twitter:title" content="Demon Slayer Manga And Anime Series Online | Kimetsu 360">
 <meta property="twitter:description" content="You are Reading Demon Slayer Manga Online Fully Coloured, Download Latest Anime Episodes And Movies For Free In High Quality Format, only at Kimetsu 360">
 <meta property="twitter:image" content="img/background-1.webp">
-<meta name="monetag" content="8fd2f3a85816fa2ffd1e4383ada4ed80">
+<!-- TAGS AND SNIPPET -->
+<meta name="monetag" content="205430fb74c226f18a17c1f20997611c">
 <meta name="google-site-verification" content="l14lY2E9oxWq9ohRfhDtpeM2D44bgWMkxZTE5pos2qg" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XP6KNZ2WQM"></script>
@@ -67,6 +68,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'G-XP6KNZ2WQM');
 </script>
+<!--END TAGS AND SNIPPET -->
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
