--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-W5H4B8FV');</script>
+})(window,document,'script','dataLayer','GTM-TJQVMTKK');</script>
 <!-- End Google Tag Manager -->
 <link rel="canonical" href="https://https://demon-slayer.pages.dev">
 <title>Demon Slayer Manga And Anime Series Online | Kimetsu 360</title>
