--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -55,6 +55,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <meta property="twitter:title" content="Download Demon Slayer Anime Episodes Online | Kimetsu 360">
 <meta property="twitter:description" content="Download Demon Slayer Episodes Online. You are Downloading the Latest Episodes, Movies And More of demon slayer series In free HD Formats, only at Kimetsu 360">
 <meta property="twitter:image" content="../img/background-1.webp">
+<!-- TAGS AND SNIPPET -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-XP6KNZ2WQM"></script>
 <script>
@@ -64,6 +65,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'G-XP6KNZ2WQM');
 </script>
+<!--END TAGS AND SNIPPET -->
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
