--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-TJQVMTKK');</script>
 <!-- End Google Tag Manager -->
-<link rel="canonical" href="https://https://demon-slayer.pages.dev">
+<link rel="canonical" href="https://demon-slayer.watchfilm.xyz/">
 <title>Demon Slayer Manga And Anime Series Online | Kimetsu 360</title>
 <meta name="title" content="Demon Slayer Manga And Anime Series Online | Kimetsu 360">
 
@@ -21,7 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@context" : "https://schema.org",
       "@type" : "WebSite",
       "name" : "Kimetsu 360",
-      "url" : "https://demon-slayer.pages.dev"
+      "url" : "https://demon-slayer.watchfilm.xyz"
     }
   </script>
 
@@ -45,14 +45,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Kimetsu 360">
-<meta property="og:url" content="https://demon-slayer.pages.dev">
+<meta property="og:url" content="https://demon-slayer.watchfilm.xyz">
 <meta property="og:title" content="Demon Slayer Manga And Anime Series Online | Kimetsu 360">
 <meta property="og:description" content="You are Reading Demon Slayer Manga Online Fully Coloured, Download Latest Anime Episodes And Movies For Free In High Quality Format, only at Kimetsu 360">
 <meta property="og:image" content="img/background-1.webp">
  
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image"/>
-<meta property="twitter:url" content="https://demon-slayer.pages.dev">
+<meta property="twitter:url" content="https://demon-slayer.watchfilm.xyz">
 <meta property="twitter:title" content="Demon Slayer Manga And Anime Series Online | Kimetsu 360">
 <meta property="twitter:description" content="You are Reading Demon Slayer Manga Online Fully Coloured, Download Latest Anime Episodes And Movies For Free In High Quality Format, only at Kimetsu 360">
 <meta property="twitter:image" content="img/background-1.webp">
@@ -368,7 +368,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!----MISCELLANEOUS CODE----->
 <div class="apk">
-<a href="https://demon-slayer.pages.dev/kimetsu.apk" alt="Download Kimetsu Official App">
+<a href="https://demon-slayer.watchfilm.xyz/kimetsu.apk" alt="Download Kimetsu Official App">
 <img src="img/apk.webp" alt="apk logo">
 </a>
 </div>
