--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!----MISCELLANEOUS CODE----->
 <div class="apk">
-<a href="https://demon-slayer.watchfilm.xyz/kimetsu.apk" alt="Download Kimetsu Official App">
+<a href="kimetsu.apk" alt="Download Kimetsu Official App">
 <img src="img/apk.webp" alt="apk logo">
 </a>
 </div>
