--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -12,7 +12,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-TJQVMTKK');</script>
 <!-- End Google Tag Manager -->
-<link rel="canonical" href="https://demon-slayer.pages.dev/seasons/episodes.html">
+<link rel="canonical" href="https://demon-slayer.watchfilm.xyz/seasons/episodes.html">
 <title>Download Demon Slayer Anime Episodes Online | Kimetsu 360</title>
 <meta name="title" content="Download Demon Slayer Anime Episodes Online | Kimetsu 360">
 
@@ -21,7 +21,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       "@context" : "https://schema.org",
       "@type" : "WebSite",
       "name" : "Kimetsu 360",
-      "url" : "https://demon-slayer.pages.dev/seasons/episodes.html"
+      "url" : "https://demon-slayer.watchfilm.xyz/seasons/episodes.html"
     }
   </script>
 
@@ -44,14 +44,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:site_name" content="Kimetsu 360">
-<meta property="og:url" content="https://demon-slayer.pages.dev/seasons/episodes.html">
+<meta property="og:url" content="https://demon-slayer.watchfilm.xyz/seasons/episodes.html">
 <meta property="og:title" content="Download Demon Slayer Anime Episodes Online | Kimetsu 360">
 <meta property="og:description" content="Download Demon Slayer Episodes Online. You are Downloading the Latest Episodes, Movies And More of demon slayer series In free HD Formats, only at Kimetsu 360">
 <meta property="og:image" content="../img/background-1.webp">
  
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image"/>
-<meta property="twitter:url" content="https://demon-slayer.pages.dev/seasons/episodes.html">
+<meta property="twitter:url" content="https://demon-slayer.watchfilm.xyz/seasons/episodes.html">
 <meta property="twitter:title" content="Download Demon Slayer Anime Episodes Online | Kimetsu 360">
 <meta property="twitter:description" content="Download Demon Slayer Episodes Online. You are Downloading the Latest Episodes, Movies And More of demon slayer series In free HD Formats, only at Kimetsu 360">
 <meta property="twitter:image" content="../img/background-1.webp">
