--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   gtag('config', 'G-XP6KNZ2WQM');
 </script>
 <!--END TAGS AND SNIPPET -->
+<!---ADS INTEGRATION---->
+<script src="js/popunder-ads.js"></script>
+<script src="js/vignette-ads.js"></script>
+<!---END ADS INTEGRATION---->
 </head>
 <body>
 <!-- Google Tag Manager (noscript) -->
