--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <script src="vignetteads.js"></script>
 <!---END ADS INTEGRATION---->
 
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://zovidree.com/tag.min.js',7608120,document.body||document.documentElement)</script>
+
+
+
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
