--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="viewport" content="width=device-width, initial scale=1">
 
 <!---ADS INTEGRATION---->
-<script src="popunderads.js"></script>
-<script src="vignetteads.js"></script>
+<script src="js/popunderads.js"></script>
+<script src="js/vignetteads.js"></script>
 <!---END ADS INTEGRATION---->
 
 
