--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -5,6 +5,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial scale=1">
+
+<!---ADS INTEGRATION---->
+<script src="../js/popunderads.js"></script>
+<script src="../js/vignetteads.js"></script>
+<!---END ADS INTEGRATION---->
+
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
