--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 <!---END HEADER---->
 
+<div class="container-10">
+<p><span>Description:</span>Demon Slayer: Kimetsu no Yaiba is a Japanese manga series and TV show that follows Tanjiro Kamado: Tanjiro sets out to become a demon slayer to avenge his family and cure his sister.A family is attacked by demons and only two members survive - Tanjiro and his sister Nezuko, who is turning into a demon slowly. Tanjiro sets out to become a demon slayer to avenge his family and cure his sister.</p>
+</div>
+
 <!----SECTION 1 SEASONS----->
 <!----SECTION 1 SEASONS----->
 <!---Carusol Google SEO--->
