--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <meta itemprop="position" content="3">
 </div>
 
-<div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="seasons/download-episodes.html#season1" itemprop="url" alt="Season 1"><img itemprop="image" src="img/kimetsu-no-yaiba.jpeg" alt="Kimetsu Season 1 image"><h2 itemprop="name">Kimetsu No Yaiba : Tangiro Resolve</br> <span>Season 1</span></h2></a>
+<div itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem"><a href="seasons/download-episodes.html#season1" itemprop="url" alt="Season 1"><img itemprop="image" src="img/kimetsu-no-yaiba.jpeg" alt="Kimetsu Season 1 image"><h2 itemprop="name">Kimetsu No Yaiba : Tangiro Unwavering Resolve Arc</br> <span>Season 1</span></h2></a>
 <meta itemprop="position" content="4">
 </div>
 <!---End repeated main content--->
