--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div></div>
 
 <div class="column">
-<div><img src="img/tatsumi-movie.webp" alt="Movie image">
+<div><img src="img/tatsumi-movie.jpeg" alt="Movie image">
 <h2>Kimetsu No Yaiba: Rengoku Vs Akaza Full Movie</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
