--- a/index.html
+++ b/index.html
@@ -199,21 +199,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!---Repeated main content--->
 <div class="column">
 <div><img src="img/mugen-movie.webp" alt="Movie image">
-<h2>Kimetsu No Yaiba: Rengoku Vs Akaza Full Movie</h2>
+<h2>Kimetsu No Yaiba Movie: Mugen Ressha-hen</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
 </div></div> 
 
 <div class="column">
 <div><img src="img/mt-natagumo.webp" alt="Movie image">
-<h2>Kimetsu No Yaiba: Rengoku Vs Akaza Full Movie</h2>
+<h2>Kimetsu No Yaiba Recap Movie 2: Mt. Natagumo Arc</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
 </div></div>
 
 <div class="column">
 <div><img src="img/tatsumi-movie.jpeg" alt="Movie image">
-<h2>Kimetsu No Yaiba: Rengoku Vs Akaza Full Movie</h2>
+<h2>Kimetsu No Yaiba: Tsuzumi Yashiki Hen</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
 </div></div>
