--- a/index.html
+++ b/index.html
@@ -199,22 +199,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!---Repeated main content--->
 <div class="column">
 <div><img src="img/mugen-movie.webp" alt="Movie image">
-<h2>Kimetsu No Yaiba Movie: Mugen Ressha-hen</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+<h2>Kimetsu No Yaiba Movie: Mugen Ressha-hen 2020</h2>
+<p>Tanjirou Kamado and his friends from the Demon Slayer Corps accompany Kyoujurou Rengoku, the Flame Hashira, to investigate a mysterious series of disappearances occurring inside a train. Little do they know that Enmu, one of the Twelve Kizuki, is also on board and has prepared a trap for them.</p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
 </div></div> 
 
 <div class="column">
 <div><img src="img/mt-natagumo.webp" alt="Movie image">
-<h2>Kimetsu No Yaiba Recap Movie 2: Mt. Natagumo Arc</h2>
+<h2>Kimetsu No Yaiba Recap Movie 2: Mt. Natagumo Arc 2021</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
 </div></div>
 
 <div class="column">
 <div><img src="img/tatsumi-movie.jpeg" alt="Movie image">
-<h2>Kimetsu No Yaiba: Tsuzumi Yashiki Hen</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+<h2>Kimetsu No Yaiba: Tsuzumi Yashiki Hen 2021</h2>
+<p>Compilation TV Special of the Tsuzumi Yashiki Arc (Tsuzumi Mansion Arc)) (episodes 11-14) with new eyecatches, end credits scenes and next episode previews.</p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
 </div></div>
 <!---End repeated main content--->
