--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div class="column">
 <div><img src="img/mt-natagumo.webp" alt="Movie image">
-<h2>Kimetsu No Yaiba Recap Movie 2: Mt. Natagumo Arc 2021</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+<h2>Kimetsu No Yaiba Recap Movie 2: Mt. Natagumo Arc 2020</h2>
+<p>Tanjiro teams up with Zenitsu and Inosuke to investigate missing person cases on the mountain Natagumo. They slowly begin to realize the entire mountain is being controlled by a family of Demon spider creatures. This is a recap film of Kimetsu no Yaiba, covering episodes 15-21 with some new footage and special ending credits.</p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
 </div></div>
 
