--- a/index.html
+++ b/index.html
@@ -224,6 +224,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <p>Compilation TV Special of the Tsuzumi Yashiki Arc (Tsuzumi Mansion Arc)) (episodes 11-14) with new eyecatches, end credits scenes and next episode previews.</p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
 </div></div>
+
+<div class="column">
+<div><img src="img/sibling-movie.jpg" alt="Movie image">
+<h2>Kimetsu No Yaiba Recap Movie 1: Siblings Bond</h2>
+<p>Compilation TV Special of the Tsuzumi Yashiki Arc (Tsuzumi Mansion Arc)) (episodes 11-14) with new eyecatches, end credits scenes and next episode previews.</p>
+<a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
+</div></div>
+
+<div class="column">
+<div><img src="img/hashira-meeting.jpg" alt="Movie image">
+<h2>Kimetsu No Yaiba Recap Movie 3: The Hashira Meeting Arc</h2>
+<p>Compilation TV Special of the Tsuzumi Yashiki Arc (Tsuzumi Mansion Arc)) (episodes 11-14) with new eyecatches, end credits scenes and next episode previews.</p>
+<a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
+</div></div>
 <!---End repeated main content--->
 
 </div>
