--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <div class="column">
 <div><img src="img/sibling-movie.jpg" alt="Movie image">
 <h2>Kimetsu No Yaiba Recap Movie 1: Siblings Bond 2021</h2>
-<p>Compilation TV Special of the Tsuzumi Yashiki Arc (Tsuzumi Mansion Arc)) (episodes 11-14) with new eyecatches, end credits scenes and next episode previews.</p>
+<p>Tanjiro finds his family slaughtered and the lone survivor, his sister Nezuko Kamado, turned into a Demon. To his surprise, however, Nezuko still shows signs of human emotion and thought. Thus begins Tanjiro's journey to seek out the Demon who killed their family and turn his sister human again. A recap film of Kimetsu no Yaiba, covering episodes 1-5 with extra footage.</p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
 </div></div>
 
 <div class="column">
 <div><img src="img/hashira-meeting.jpg" alt="Movie image">
 <h2>Kimetsu No Yaiba Recap Movie 3: The Hashira Meeting Arc 2021</h2>
-<p>Compilation TV Special of the Tsuzumi Yashiki Arc (Tsuzumi Mansion Arc)) (episodes 11-14) with new eyecatches, end credits scenes and next episode previews.</p>
+<p>Tanjiro and Nezuko have been apprehended by the Demon Slayer Hashira, a group of extremely skilled swordfighters. Tanjiro undergoes trial for violating the Demon Slayer code, specifically smuggling Nezuko, a Demon, onto Mt. Natagumo.</p>
 <a href="movies/download-raw.html" alt="Preview movie"><span> Download Now</span></a>
 </div></div>
 <!---End repeated main content--->
