--- a/index.html
+++ b/index.html
@@ -400,6 +400,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!----END SECTION 6----->
 
 <!----MISCELLANEOUS CODE----->
+<div class="fb-icon">
+<a href="https://fb.com/@onepiece-plus" alt="Follow our Facebook page">
+<img src="img/fb-icon.png" alt="fb logo">
+</a></div>
+
+<div class="yt-icon">
+<a href="https://m.youtube.com/@onepiece-plus" alt="Subscribe to our YouTube Channel">
+<img src="img/yt-icon.png" alt="yt logo">
+</a></div>
+
 <div class="apk">
 <a href="kimetsu.apk" alt="Download Kimetsu Official App">
 <img src="img/apk.webp" alt="apk logo">
