--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <!----MISCELLANEOUS CODE----->
 <div class="fb-icon">
-<a href="https://fb.com/@onepiece-plus" alt="Follow our Facebook page">
+<a href="https://www.facebook.com/onepiece360" alt="Follow our Facebook page">
 <img src="img/fb-icon.png" alt="fb logo">
 </a></div>
 
