--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -123,6 +123,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <span><img src="../img/play.svg" alt="Home icon"><a href="#seasons" rel="tags" alt="Episode">Episodes</a></span></br>
 
 <span><img src="../img/infinity.svg" alt="Home icon"><a href="#footer" rel="tags" alt="About us">About Us</a></span></br>
+
+<span><img src="../img/open-in-new-window.svg" alt="Watchfilm"><a href="https://watchfilm.xyz" rel="tags" alt="Watchfilm">Other Animes</a></span></br>
 <!---End Links----->
 </div>
 </nav>
