--- a/index.html
+++ b/index.html
@@ -399,7 +399,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </footer>
 <!----END SECTION 6----->
 
+
+<!----NOTICE------>
+<div id="notice" onclick="closenotice()">
+<div class="block-1">
+<p><span>Help Guide</span></br>
+Due to Chrome browser troubleshooting, please use opera mini to surf and enjoy this site. Other complaints <a href="mailto:watchfilm360@gmail.com">email us now</a></p>
+</div>
+</div>
+<!----END NOTICE------>
+
+
 <!----MISCELLANEOUS CODE----->
+<div class="help-me">
+<a href="javascript:void(0);" onclick="opennotice()" alt="Help me">
+<img src="img/help.png" alt="help logo">
+</a></div>
+
 <div class="fb-icon">
 <a href="https://www.facebook.com/onepiece360" alt="Follow our Facebook page">
 <img src="img/fb-icon.png" alt="fb logo">
