--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!---End Sidebar Navigations--->
 <!---Header Body--->
 <div class="container-1">
-<img src="https://onedrive.live.com/embed?resid=B0ADA3FC7D75C34F%21116&authkey=%21AAFLVR2_jYO1ONE" alt="Kimetsu Background">
+<img src="img/background-1.webp" alt="Kimetsu Background">
 
 <div class="container-2"><span>&nbsp; Latest &nbsp;</span></div>
 
