--- a/seasons/download-episodes.html
+++ b/seasons/download-episodes.html
@@ -310,6 +310,82 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <span><strong itemprop="name">Episode 06</strong><a href="downloadlink" alt="Download episode">Download</a></span>
 </div>
 
+<div class="columno">
+<span><strong itemprop="name">Episode 07</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 08</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 09</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 10</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 11</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 12</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 14</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 15</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 16</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 17</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 18</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 19</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 20</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 21</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 22</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 23</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 24</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 25</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
+<div class="columno">
+<span><strong itemprop="name">Episode 26</strong><a href="downloadlink" alt="Download episode">Download</a></span>
+</div>
+
 </div>
 </div>
 <!---End Episodes---->
